@@ -6,6 +6,7 @@ import graphql.schema.DataFetchingEnvironment;
 import graphql.schema.DataFetchingFieldSelectionSet;
 import io.github.resilience4j.circuitbreaker.CallNotPermittedException;
 import lombok.extern.slf4j.Slf4j;
+import no.nav.safselvbetjening.consumer.dokarkiv.Basedata;
 import no.nav.safselvbetjening.dokumentoversikt.audit.DokumentoversiktAudit;
 import no.nav.safselvbetjening.domain.Dokumentoversikt;
 import no.nav.safselvbetjening.domain.Fagsak;
@@ -20,11 +21,10 @@ import no.nav.security.token.support.core.jwt.JwtToken;
 import org.slf4j.MDC;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+import static java.util.Collections.emptyList;
 import static no.nav.safselvbetjening.CoreConfig.SYSTEM_CLOCK;
 import static no.nav.safselvbetjening.MDCUtils.MDC_CALL_ID;
 import static no.nav.safselvbetjening.MDCUtils.MDC_CONSUMER_ID;
@@ -103,11 +103,11 @@ public class DokumentoversiktSelvbetjeningDataFetcher implements DataFetcher<Obj
 			log.error("dokumentoversiktSelvbetjening circuitbreaker={} er åpen.", e.getCausingCircuitBreakerName(), e);
 			return DataFetcherResult.newResult()
 					.error(SERVER_ERROR.construct(environment, "Circuitbreaker=" + e.getCausingCircuitBreakerName() + " er åpen." +
-															   " Kall til denne tjenesten går ikke gjennom."))
+							" Kall til denne tjenesten går ikke gjennom."))
 					.build();
 		} catch (Exception e) {
 			log.error("dokumentoversiktSelvbetjening midlertidig teknisk feil. " +
-					  "Dette er som oftest forårsaket av midlertidige feil på nettverk/kobling mellom apper. Se stacktrace. message={}",
+							"Dette er som oftest forårsaket av midlertidige feil på nettverk/kobling mellom apper. Se stacktrace. message={}",
 					e.getMessage(), e);
 			return DataFetcherResult.newResult()
 					.error(SERVER_ERROR.construct(environment, FEILMELDING_MIDLERTIDIG_TEKNISK_FEIL))
@@ -150,7 +150,7 @@ public class DokumentoversiktSelvbetjeningDataFetcher implements DataFetcher<Obj
 			}
 			return temaQueryService.query(basedata);
 		} else {
-			return new ArrayList<>();
+			return emptyList();
 		}
 	}
 
@@ -162,7 +162,7 @@ public class DokumentoversiktSelvbetjeningDataFetcher implements DataFetcher<Obj
 			}
 			return fagsakQueryService.query(basedata);
 		} else {
-			return new ArrayList<>();
+			return emptyList();
 		}
 	}
 
@@ -171,7 +171,7 @@ public class DokumentoversiktSelvbetjeningDataFetcher implements DataFetcher<Obj
 		if (selectionSet.contains("journalposter")) {
 			return journalposterQueryService.query(journalpostdata);
 		} else {
-			return new ArrayList<>();
+			return emptyList();
 		}
 	}
 
@@ -192,7 +192,7 @@ public class DokumentoversiktSelvbetjeningDataFetcher implements DataFetcher<Obj
 			throw GraphQLException.of(UNAUTHORIZED, environment, FEILMELDING_TOKEN_MANGLER_I_HEADER);
 		}
 		if (!subjectJwt.getJwtTokenClaims().containsClaim(CLAIM_PID, identArgument) &&
-			!subjectJwt.getJwtTokenClaims().containsClaim(CLAIM_SUB, identArgument)) {
+				!subjectJwt.getJwtTokenClaims().containsClaim(CLAIM_SUB, identArgument)) {
 			Optional<Fullmakt> fullmakt = fullmektigService.finnFullmakt(subjectJwt, identArgument);
 			if (fullmakt.isPresent()) {
 				MDC.put(MDC_FULLMAKT_TEMA, fullmakt.get().tema().toString());
@@ -210,13 +210,13 @@ public class DokumentoversiktSelvbetjeningDataFetcher implements DataFetcher<Obj
 			List<String> fullmaktTema = fullmakt.get().tema();
 			return temaArgument.stream()
 					.filter(fullmaktTema::contains)
-					.collect(Collectors.toList());
+					.toList();
 		}
 		return temaArgument;
 	}
 
 	private static List<String> temaArgumentEllerDefault(DataFetchingEnvironment environment) {
-		final List<String> temaArgument = environment.getArgumentOrDefault("tema", new ArrayList<>());
+		final List<String> temaArgument = environment.getArgumentOrDefault("tema", emptyList());
 		return temaArgument.isEmpty() ? Tema.tillattInnsynNavNoString() : temaArgument;
 	}
 
