@@ -3,27 +3,33 @@ package no.nav.safselvbetjening.dokumentoversikt;
 import graphql.schema.DataFetchingEnvironment;
 import lombok.extern.slf4j.Slf4j;
 import no.nav.safselvbetjening.SafSelvbetjeningProperties;
+import no.nav.safselvbetjening.consumer.dokarkiv.Basedata;
 import no.nav.safselvbetjening.consumer.dokarkiv.DokarkivConsumer;
-import no.nav.safselvbetjening.consumer.dokarkiv.FinnJournalposterRequestTo;
+import no.nav.safselvbetjening.consumer.dokarkiv.Saker;
 import no.nav.safselvbetjening.consumer.dokarkiv.domain.JournalStatusCode;
-import no.nav.safselvbetjening.consumer.dokarkiv.domain.JournalpostDto;
 import no.nav.safselvbetjening.consumer.dokarkiv.domain.JournalpostTypeCode;
+import no.nav.safselvbetjening.consumer.dokarkiv.safintern.ArkivJournalpost;
+import no.nav.safselvbetjening.consumer.dokarkiv.safintern.ArkivJournalpostMapper;
+import no.nav.safselvbetjening.consumer.dokarkiv.safintern.FinnJournalposterRequest;
+import no.nav.safselvbetjening.consumer.pensjon.Pensjonsak;
+import no.nav.safselvbetjening.consumer.sak.Joarksak;
 import no.nav.safselvbetjening.domain.DomainConstants;
 import no.nav.safselvbetjening.domain.Journalpost;
 import no.nav.safselvbetjening.graphql.GraphQLException;
 import no.nav.safselvbetjening.service.BrukerIdenter;
 import no.nav.safselvbetjening.service.IdentService;
 import no.nav.safselvbetjening.service.SakService;
-import no.nav.safselvbetjening.service.Saker;
 import no.nav.safselvbetjening.tilgang.UtledTilgangService;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 
+import static java.util.Collections.emptyList;
+import static java.util.Collections.emptySet;
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static no.nav.safselvbetjening.consumer.dokarkiv.domain.JournalStatusCode.E;
 import static no.nav.safselvbetjening.consumer.dokarkiv.domain.JournalStatusCode.FL;
 import static no.nav.safselvbetjening.consumer.dokarkiv.domain.JournalStatusCode.FS;
@@ -35,7 +41,7 @@ import static no.nav.safselvbetjening.graphql.ErrorCode.NOT_FOUND;
 
 @Slf4j
 @Component
-class DokumentoversiktSelvbetjeningService {
+public class DokumentoversiktSelvbetjeningService {
 
 	private static final List<JournalStatusCode> MIDLERTIDIGE_OG_FERDIGSTILTE_JOURNALSTATUSER = Arrays.asList(MO, M, J, E, FL, FS);
 	private static final List<JournalStatusCode> FERDIGSTILTE_JOURNALSTATUSER = Arrays.asList(J, E, FL, FS);
@@ -45,20 +51,20 @@ class DokumentoversiktSelvbetjeningService {
 	private final IdentService identService;
 	private final SakService sakService;
 	private final DokarkivConsumer dokarkivConsumer;
-	private final JournalpostMapper journalpostMapper;
+	private final ArkivJournalpostMapper arkivJournalpostMapper;
 	private final UtledTilgangService utledTilgangService;
 
-	public DokumentoversiktSelvbetjeningService(final SafSelvbetjeningProperties safSelvbetjeningProperties,
-												final IdentService identService,
-												final SakService sakService,
-												final DokarkivConsumer dokarkivConsumer,
-												final JournalpostMapper journalpostMapper,
-												final UtledTilgangService utledTilgangService) {
+	public DokumentoversiktSelvbetjeningService(SafSelvbetjeningProperties safSelvbetjeningProperties,
+												IdentService identService,
+												SakService sakService,
+												DokarkivConsumer dokarkivConsumer,
+												ArkivJournalpostMapper arkivJournalpostMapper,
+												UtledTilgangService utledTilgangService) {
 		this.safSelvbetjeningProperties = safSelvbetjeningProperties;
 		this.identService = identService;
 		this.sakService = sakService;
 		this.dokarkivConsumer = dokarkivConsumer;
-		this.journalpostMapper = journalpostMapper;
+		this.arkivJournalpostMapper = arkivJournalpostMapper;
 		this.utledTilgangService = utledTilgangService;
 	}
 
@@ -71,18 +77,18 @@ class DokumentoversiktSelvbetjeningService {
 		return new Basedata(brukerIdenter, saker);
 	}
 
-	Journalpostdata queryFiltrerAlleJournalposter(final Basedata basedata, final List<String> tema) {
-		final BrukerIdenter brukerIdenter = basedata.getBrukerIdenter();
-		final Saker saker = basedata.getSaker();
-		List<JournalpostDto> tilgangJournalposter = dokarkivConsumer.finnJournalposter(finnAlleJournalposterRequest(brukerIdenter, saker)).getTilgangJournalposter();
-		return mapOgFiltrerJournalposter(tema, brukerIdenter, saker, tilgangJournalposter);
+	Journalpostdata queryFiltrerAlleJournalposter(Basedata basedata, List<String> tema) {
+		final BrukerIdenter brukerIdenter = basedata.brukerIdenter();
+		final Saker saker = basedata.saker();
+		List<ArkivJournalpost> tilgangJournalposter = dokarkivConsumer.finnJournalposter(finnAlleJournalposterRequest(brukerIdenter, saker), emptySet()).journalposter();
+		return mapOgFiltrerJournalposter(tema, brukerIdenter, Optional.empty(), tilgangJournalposter);
 	}
 
-	Journalpostdata queryFiltrerSakstilknyttedeJournalposter(final Basedata basedata, final List<String> tema) {
-		final BrukerIdenter brukerIdenter = basedata.getBrukerIdenter();
-		final Saker saker = basedata.getSaker();
-		List<JournalpostDto> tilgangJournalposter = dokarkivConsumer.finnJournalposter(finnFerdigstilteJournalposterRequest(saker)).getTilgangJournalposter();
-		return mapOgFiltrerJournalposter(tema, brukerIdenter, saker, tilgangJournalposter);
+	Journalpostdata queryFiltrerSakstilknyttedeJournalposter(Basedata basedata, List<String> tema) {
+		final BrukerIdenter brukerIdenter = basedata.brukerIdenter();
+		final Saker saker = basedata.saker();
+		List<ArkivJournalpost> tilgangJournalposter = dokarkivConsumer.finnJournalposter(finnFerdigstilteJournalposterRequest(saker), emptySet()).journalposter();
+		return mapOgFiltrerJournalposter(tema, brukerIdenter, Optional.empty(), tilgangJournalposter);
 	}
 
 	/*
@@ -90,50 +96,49 @@ class DokumentoversiktSelvbetjeningService {
 	 */
 	private Journalpostdata mapOgFiltrerJournalposter(List<String> tema,
 													  BrukerIdenter brukerIdenter,
-													  Saker saker,
-													  List<JournalpostDto> tilgangJournalposter) {
+													  Optional<Pensjonsak> pensjonsakOptional,
+													  List<ArkivJournalpost> tilgangJournalposter) {
 		List<Journalpost> filtrerteJournalposter = tilgangJournalposter
 				.stream()
-				.map(journalpostDto -> journalpostMapper.map(journalpostDto, saker, brukerIdenter))
+				.map(journalpost -> arkivJournalpostMapper.map(journalpost, brukerIdenter, pensjonsakOptional))
 				.filter(Objects::nonNull)
 				.filter(journalpost -> utledTilgangService.utledTilgangJournalpost(journalpost, brukerIdenter))
 				.map(journalpost -> setDokumentVariant(journalpost, brukerIdenter))
 				// Filtrer ut midlertidige journalposter som ikke har riktig tema.
 				.filter(journalpost -> tema.contains(journalpost.getTema()))
-				.collect(toList());
+				.toList();
 		return new Journalpostdata(tilgangJournalposter.size(), filtrerteJournalposter);
 	}
 
 	/*
 	 * 1c) Bruker får kun se midlertidige og ferdigstilte journalposter.
 	 */
-	private FinnJournalposterRequestTo finnAlleJournalposterRequest(BrukerIdenter brukerIdenter, Saker saker) {
-		return baseFinnJournalposterRequest(saker)
-				.alleIdenter(brukerIdenter.getFoedselsnummer())
-				.inkluderJournalStatus(MIDLERTIDIGE_OG_FERDIGSTILTE_JOURNALSTATUSER)
-				.build();
+	private FinnJournalposterRequest finnAlleJournalposterRequest(BrukerIdenter brukerIdenter, Saker saker) {
+		return baseFinnJournalposterRequest(saker, MIDLERTIDIGE_OG_FERDIGSTILTE_JOURNALSTATUSER, brukerIdenter.getFoedselsnummer());
 	}
 
 	/*
 	 * Modifikasjon av 1c - midlertidige journalposter vises ikke da de er uten sakstilknytning.
 	 */
-	private FinnJournalposterRequestTo finnFerdigstilteJournalposterRequest(Saker saker) {
-		return baseFinnJournalposterRequest(saker)
-				.inkluderJournalStatus(FERDIGSTILTE_JOURNALSTATUSER)
-				.build();
+	private FinnJournalposterRequest finnFerdigstilteJournalposterRequest(Saker saker) {
+		return baseFinnJournalposterRequest(saker, FERDIGSTILTE_JOURNALSTATUSER, emptyList());
 	}
 
 	/*
 	 * 1d) Bruker får ikke se feilregistrerte journalposter.
 	 */
-	private FinnJournalposterRequestTo.FinnJournalposterRequestToBuilder baseFinnJournalposterRequest(Saker saker) {
-		return FinnJournalposterRequestTo.builder()
-				.psakSakIds(saker.getPensjonSakIds())
-				.gsakSakIds(saker.getArkivSakIds())
-				.fraDato(safSelvbetjeningProperties.getTidligstInnsynDato().toString())
-				.inkluderJournalpostType(ALLE_JOURNALPOSTTYPER)
-				.foerste(9999)
-				.visFeilregistrerte(false);
+	private FinnJournalposterRequest baseFinnJournalposterRequest(Saker saker, List<JournalStatusCode> inkluderJournalstatuser, List<String> foedselsnummer) {
+		return new FinnJournalposterRequest(
+				saker.arkivsaker().stream().map(Joarksak::getId).toList(),
+				saker.pensjonsaker().stream().map(Pensjonsak::sakId).toList(),
+				safSelvbetjeningProperties.getTidligstInnsynDato().toString(),
+				null,
+				false,
+				foedselsnummer,
+				inkluderJournalstatuser,
+				ALLE_JOURNALPOSTTYPER,
+				9999,
+				null);
 	}
 
 	private Journalpost setDokumentVariant(Journalpost journalpost, BrukerIdenter brukerIdenter) {
